style.css
/* 
paragraph font size = 20px : 1.25rem,
h1 font size = 60px : 3.75rem,
h2 font size = 35px : 2.188rem,
h3 font size = 20px : 1.25rem


*/

@font-face {
  font-family: Courier-Std;
  src: url(./font/CourierStd.otf);
}
@font-face {
  font-family: Courier-Std;
  src: url(./font/CourierStd-Bold.otf);
  font-weight: bold;
}
*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: Courier Std,'Courier New', Courier, monospace;
}

body > div{
  width: 100vw;
  height: 100vh;
  background-color: hsla(0, 0%, 100%, 0.81);
  background-image: url("./images/white-paper-texture.png");
  overflow-x: hidden;
  border-top: 2px solid black;
  border-bottom: 8px solid black;
}

h1{
  font-size: 40px;
  font-weight: bold;
  text-decoration: underline;
  mix-blend-mode: color-burn;
}

h2{
  font-size: 20px;
  mix-blend-mode: color-burn;
}

h3{
  font-weight: normal;
  padding: 0.1rem;
  mix-blend-mode: color-burn;
  font-weight: bold;
}

p{
  font-size: 16px;
  mix-blend-mode: color-burn;
}

/* Home page */

.staple-pin{
  width: 8%;
  position: absolute;
  top: 1vh;
  left: 10px
}

#home-pg{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.coffee-stain{
  position: relative;
  right: 0%;
}

.coffee-stain img{
  width: 28vw;
}

.intro-text{
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  mix-blend-mode: color-burn;
}
.intro-text div{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 90%;
  padding-top: 80px;
}

.intro-text h1{
  margin-bottom: 20px;
}

.intro-text h2{
  margin-block: 20px;
  font-weight: normal;
}

.side-props{
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: end;
  height: 100%;
  
}

.lens-cap img{
  width: 35vh;
}

.polaroid img{
  width: 55vh;
  mix-blend-mode:multiply;
}

.lens-cap-mobile{
  display: none;
}

@media screen and (max-width: 1000px){
  .staple-pin{
    width: 20%;
    position: absolute;
    top: 1vh;
    left: 10px
  }
  
  #home-pg{
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
  }
  
  .coffee-stain{
    position: absolute;
    left: 0%;
    top: 60%;
    z-index: 0;
  }
  
  .coffee-stain img{
    width: 55vw;
  }
  
  .intro-text{
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 45vh;
    mix-blend-mode: color-burn;
    padding-top: 5rem;
  }
  .intro-text div{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: auto;
    padding-top: 1rem;
  }
  
  .intro-text h1{
    margin-bottom: 20px;
  }
  
  .intro-text h2{
    margin-block: 20px;
    font-weight: normal;
  }
  
  .side-props{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: end;
    height: auto;
    position: absolute;
    top: 0%;
    right: 0%;
    z-index: 1;
  }
  
  .lens-cap img{
    display: none;
    width: 80%;
  }
  
  .polaroid{
    width: 100vw;
  }

  .polaroid img{
    float: right;
    width: 70%;
    mix-blend-mode:multiply;
  }

  .lens-cap-mobile{
    display: block;
    position: absolute;
    bottom: 0%;
    right: 0%;
    width: 100vw;
  }

  .lens-cap-mobile img{
    width: 55%;
    float: right;
  }
}

/* Home page */

/* .staple-pin1{
  width: 8%;
  position: relative;
  top: 1vh;
  left: 20px
} */

/* Page 1 */

#story-pg1{
  padding: 2rem;
  padding-right: 0;
  padding-bottom: 0;
}

#story-pg1{
  height: 100%;
}

.pg1-content{
  display: flex;
  flex-direction: row;
  height: auto;
  overflow: hidden;
}

.script-pg1{
  width: 60vw;
  justify-self: center;
}

.script-1 p:nth-child(3){
  padding-top: 1rem;
}

.para-inner{
  width: 90%;
  padding-left: 40%;
  padding-block: 0.5rem;
}

.para-inner h3{
  text-align: center;
}

.placeholder{
  width: 80%;
  mix-blend-mode: color-burn;
}

.man-and-the-mountain{
  width: 40vw;
  height: 100%;
  position: relative;
  align-self: flex-end;
  top: 2rem;
}

.man-and-the-mountain div:nth-child(1){
  display: block;
  position: absolute;
  left: 80%;
  top: 90%;
  z-index: 5;
}

.man-and-the-mountain h3{
  color: white;
  mix-blend-mode: color-burn;
}

.man-and-the-mountain video{
  width: 100%;
  z-index: 0;
}

@media screen and (max-width: 1000px){
  #story-pg1{
    padding-top: 2rem;
    padding-left: 1rem;
    padding-right: 0rem;
    padding-bottom: 0rem;
  }
  
  #story-pg1{
    height: 100%;
  }
  
  .pg1-content{
    display: flex;
    flex-direction: column;
    height: auto;
    overflow: hidden;
  }
  
  .script-pg1{
    width: 90vw;
    justify-self: center;
  }
  
  .script-1 p:nth-child(3){
    padding-top: 1rem;
  }
  
  .para-inner{
    width: 100%;
    padding-left: 25%;
  }
  
  .para-inner h3{
    text-align: center;
  }
  
  .placeholder{
    width: 100%;
    mix-blend-mode: color-burn;
  }
  
  .man-and-the-mountain{
    width: 100vw;
    height: 100%;
    position: relative;
    align-self: flex-end;
    top: rem;
  }
  
  .man-and-the-mountain div:nth-child(1){
    display: block;
    position: absolute;
    left: 75%;
    top: 90%;
    z-index: 5;
  }
  
  .man-and-the-mountain h3{
    color: white;
    mix-blend-mode: color-burn;
  }
  
  .man-and-the-mountain video{
    width: 100%;
    z-index: 0;
  }
}

/* Page 1 */

/* Page 2 */

.pg2-content{
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
  height: 100%;
}

.pg2-content .script{
  padding-left: 2rem;
  padding-top: 2rem ;
  width: 50vw;
  height: 20vh;
  z-index: 2;
  mix-blend-mode: color-burn;
}

.man-cooking-his-ideas{
  height: 100vh;
  width: 100vw;
  position: absolute;
  z-index: 0;
  mix-blend-mode: color-burn;
}

.mchi-web{
  height: 100vh;
  width: 100vw;
}

.mchi-mobile{
  display: none;
}

@media screen and (max-width: 1000px){
  .pg2-content{
    display: flex;
    justify-content: flex-start;
    flex-direction: column-reverse;
    align-items: flex-start;
    width: 100%;
    height: 100%;
  }
  
  .pg2-content .script{
    padding-left: 1rem;
    padding-top: 1rem ;
    padding-right: 1rem;
    width: 100vw;
    height: 30vh;
    z-index: 2;
    mix-blend-mode: color-burn;
  }

  .pg2-content .script p{
    padding-bottom: 1rem;
  }
  
  .man-cooking-his-ideas{
    height: 70vh;
    width: 100vw;
    position: relative;
    z-index: 0;
    mix-blend-mode: color-burn;
  }
  
  .mchi-web{
    display: none;
  }
  
  .mchi-mobile{
    display: block;
  }
}

/* Page 2 */

/* Contact Page */

#contact-pg{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  padding-top: 1rem;
  z-index: 3;
  padding-left: 2rem;
  padding-right: 2rem;
}

.contact-section{
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 90vh;
  width: auto;
}

.terminator-cat{
  align-self: center;
  justify-self: center;
  padding-bottom: 8%;
}

.terminator-cat p{
  font-size: 20px;
  padding-block: 1rem;
}

.terminator-cat img{
  width: 70%;
  mix-blend-mode: color-burn;
}

.contact-details{
  text-align: center;
  width: 85vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  row-gap: 3rem;
  height: 80vh;
}

.contact-me{
  justify-self: start;
}

.contact-me h3{
  font-size: 20px;
  padding-block: 0.3rem;
}

.contact-me p{
  font-size: 20px;
  padding-block: 0.3rem;
}

.icon{
  width: auto;
  mix-blend-mode: color-burn;
}

.icons{
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  row-gap: 1rem;
  width: auto;
  mix-blend-mode: color-burn;
}

.icons-mobile{
  display: none;
}

@media screen and (max-width: 1000px){

  #contact-pg{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    padding-top: 4rem;
    z-index: 3;
    padding-left: 2rem;
    padding-right: 2rem;
  }
  
  .contact-section{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 75vh;
    width: auto;
  }
  
  .terminator-cat{
    align-self: center;
    justify-self: center;
    padding-bottom: 0%;
  }
  
  .terminator-cat p{
    font-size: 20px;
    padding-block: 4;
  }
  
  .terminator-cat img{
    width: 70%;
    mix-blend-mode: color-burn;
  }
  
  .contact-details{
    text-align: center;
    width: 85vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    row-gap: 3rem;
    height: 90vh;
  }
  
  .contact-me{
    justify-self: center;
  }
  
  .contact-me h3{
    font-size: 18px;
    padding-block: 0.3rem;
  }
  
  .contact-me p{
    font-size: 16px;
    padding-block: 0.3rem;
  }
  
  .icon{
    display: none;
  }
  
  .icons{
    display: none;
    flex-direction: column;
    align-items: flex-end;
    row-gap: 1rem;
    width: auto;
    mix-blend-mode: color-burn;
  }
  
  .icons-mobile{
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 1rem;
  }

  .icons-mobile img{
    width: 20%;
    padding-inline: 0.5rem;
  }

}


/* Contact Page */

